forum implemented, image_url field to question added
