# internal/domain/entity/user.go
@@ -6,16 +6,18 @@ import (
 	"time"
 )
 
+//go:generate easyjson -all user.go
+
 type User struct {
-	ID          uuid.UUID
-	Name        string
-	LastName    string
-	Email       string
-	Password    string
-	AccountRole enum.AccountRole
-	CreatedAt   time.Time
-	UpdatedAt   time.Time
-	DeletedAt   *time.Time
+	ID          uuid.UUID        `json:"id"`
+	Name        *string          `json:"name"`
+	LastName    *string          `json:"last_name"`
+	Email       string           `json:"email"`
+	Password    string           `json:"password"`
+	AccountRole enum.AccountRole `json:"account_role"`
+	CreatedAt   time.Time        `json:"created_at"`
+	UpdatedAt   time.Time        `json:"updated_at"`
+	DeletedAt   *time.Time       `json:"deleted_at"`
 }
 
 func NewUser(email, password string) *User {
@@ -24,6 +26,17 @@ func NewUser(email, password string) *User {
 		Email:       email,
 		Password:    password,
 		AccountRole: enum.AccountRoleUser,
+		CreatedAt:   time.Now(),
+		UpdatedAt:   time.Now(),
+	}
+}
+
+func NewAdminUser(email, password string) *User {
+	return &User{
+		ID:          uuid.New(),
+		Email:       email,
+		Password:    password,
+		AccountRole: enum.AccountRoleAdmin,
 		CreatedAt:   time.Now(),
 		UpdatedAt:   time.Now(),
 	}
